--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,4 +1,5 @@
 .footer-section{
+    padding: 30px 0px 60px;
     .footer-wrap{
         display: flex;
         justify-content: space-between;
